<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/app_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/app_header_name"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button0"
            style="@style/appButton"
            android:onClick="showToast"
            android:text="@string/app0_name"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/button1"
            style="@style/appButton"
            android:onClick="showToast"
            android:text="@string/app1_name" />

        <Button
            android:id="@+id/button2"
            style="@style/appButton"
            android:onClick="showToast"
            android:text="@string/app2_name" />

        <Button
            android:id="@+id/button3"
            style="@style/appButton"
            android:onClick="showToast"
            android:text="@string/app3_name" />

        <Button
            android:id="@+id/button4"
            style="@style/appButton"
            android:onClick="showToast"
            android:text="@string/app4_name" />

        <Button
            android:id="@+id/button5"
            style="@style/appButton"
            android:background="#ff4670ff"
            android:onClick="showToast"
            android:text="@string/app5_name" />


    </LinearLayout>

</ScrollView>